bug workaround for wrong color display after change of stylesheets

--- a/style/style.css
+++ b/style/style.css
@@ -301,7 +301,7 @@ body {
 
 /*userlist*/
 .chatlogs .userlist {
-    height: 77%;
+    height: 78%;
     width: 0;
     z-index: 1;
     position: absolute;
