--- a/style/style2.css
+++ b/style/style2.css
@@ -300,7 +300,7 @@ display: inline-block;
 
 /*userlist*/
 .chatlogs .userlist {
-    height: 77%;
+    height: 78%;
     width: 0;
     z-index: 1;
     position: absolute;
@@ -502,7 +502,6 @@ display: inline-block;
 }
 
 .lobbyswitchOutter button {
-    background: #F53240;
     width: 100%;
     height: 100%;
     padding: 5px 15px;
@@ -516,6 +515,8 @@ display: inline-block;
     -webkit-animation: background .2s ease;
     -moz-transition: background .2s ease;
     -o-transition: background .2s ease;
+    background: #F53240;
+
 
 }
 
